# Edusched

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile.backend  Dockerfile.test  Dockerfile.worker  LICENSE  Makefile  README-DEPLOYMENT.md  README.md  README_DOCKER_COMPOSE_FIX.md  SERVICE_README.md  alembic.ini  docker-compose-final.yml  docker-compose-host.yml  docker-compose-podman.yml  docker-compose-simple.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  manage_services.sh  podman-compose.yml  pyproject.toml  pytest.ini  start-edusched.sh  start-services.sh  start_app.py  start_services.sh  课程管理模块实现总结.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  dev.yml  test.yml
config/: README.md  __init__.py  base.py  factory.py  loader.py  staging.py  testing.py  utils.py  validator.py
config/examples/: development.yaml
docs/: CONTRIBUTING.md  DATABASE_MIGRATIONS.md  GLOSSARY.md  MIGRATION_EXAMPLES.md  README.md  TESTING_ARCHITECTURE.md  TEST_WRITING_GUIDE.md  configuration.md  external-services.md
docs/adoption/: change-management.md  onboarding-and-migrations.md  training-and-support.md
docs/algorithms/: approach-overview.md  engine-orchestration.md  feasibility-and-diagnostics.md  hard-soft-constraints.md  performance-benchmarks.md  scoring-and-fairness.md
docs/api/: README-CN.md  README.md
docs/api/guides/: best-practices.md  error-handling.md  (+1 more)
docs/architecture/: deployment-topologies.md  multi-tenancy-and-isolation.md  observability.md  security-and-compliance.md  system-architecture.md  tech-stack-and-versions.md
docs/backend/: api-design.md  auth-and-rbac.md  background-tasks.md  database-schema.md  integration-and-imports.md  service-structure.md
docs/domain/: constraints-and-objectives.md  data-model.md  edge-cases.md  problem-definition.md
docs/frontend/: accessibility-and-i18n.md  component-architecture.md  routes-and-navigation.md  state-management.md  ui-information-architecture.md
docs/operations/: backups-and-dr.md  ci-cd.md  infra-and-scaling.md  release-management.md  testing-strategy.md
docs/product/: feature-map.md  personas-and-roles.md  pricing-and-packaging.md  roadmap.md  vision-and-scope.md
examples/: config-usage.py
frontend/: Dockerfile  Dockerfile.test  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 69174d2c9756_initial_migration_create_all_tables.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: create_full_initial_migration.py  create_initial_migration.py  deploy.sh  generate_full_migration.py  init-db.sql  migrate.py  monitor.sh  quick-start.sh  run_alembic.py  switch-env.py  validate-config.py
scripts/api-tests/: run_all_tests.py  test_scheduling.py  test_schools.py  test_teachers.py
tests/: conftest-full.py  conftest.py
tests/e2e/: __init__.py
tests/factories/: __init__.py  assignment_factory.py  base_factory.py  class_factory.py  course_factory.py  scheduling_factory.py  school_factory.py  section_factory.py  teacher_factory.py  timeslot_factory.py
tests/fixtures/: __init__.py
tests/integration/: test_database_integration.py
tests/scripts/: run_tests.py
tests/unit/: test_api.py  test_scheduling_engine.py
tests/utils/: __init__.py  assertion_utils.py  database_utils.py  http_test_utils.py  mock_utils.py  tenant_test_utils.py  test_data_utils.py
(+147 files in other folders)
